fix: overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,11 +7,9 @@
     font-family: Inter, system-ui, sans-serif;
     @apply scroll-smooth;
   }
-  main {
+  body {
+    @apply overflow-x-hidden;
     @apply dark:bg-gray-800 bg-white;
-    @apply transition-colors duration-1000;
-  }
-  * {
     @apply dark:text-slate-100 text-blackText;
     @apply transition-colors duration-1000;
   }
